# ConvolutionalLayers-Cuda

./: .gitignore  CMakeLists.txt  README.md
include/: conv2D.h  utils.h
src/: conv2D.cu  conv2D_optimized.cu  main.cu  utils.cu
tests/: kernel_reader.cpp  test_conv2D.cpp
